syntax = "proto3";

package intelligence;

option java_multiple_files = true;
option java_package = "protos";
option java_outer_classname = "IntelligenceProtos";

// dataType: temperature data 0x01;

message SensorMsg {
  int32 command = 1;
  int32 dataType = 2;
  bytes data = 3;
}

